--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@ant-design/nextjs-registry": "^1.3.0",
+    "@ant-design/pro-components": "^2.8.10",
+    "antd": "^5.29.2",
     "next": "16.0.10",
     "react": "19.2.1",
     "react-dom": "19.2.1"
