--- a/package.json
+++ b/package.json
@@ -5,20 +5,28 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "openapi": "node openapi.config.ts"
   },
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.3.0",
     "@ant-design/pro-components": "^2.8.10",
+    "@bytemd/plugin-gfm": "^1.22.0",
+    "@bytemd/plugin-highlight": "^1.22.0",
+    "@bytemd/react": "^1.22.0",
+    "@reduxjs/toolkit": "^2.11.2",
     "antd": "^5.29.2",
+    "axios": "^1.13.2",
     "next": "16.0.10",
     "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@umijs/openapi": "^1.14.1",
     "babel-plugin-react-compiler": "1.0.0",
     "typescript": "^5"
   }
