--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ant-design/nextjs-registry": "^1.3.0",
     "@ant-design/pro-components": "^2.8.10",
     "@ant-design/pro-form": "^2.32.0",
+    "@ant-design/pro-table": "^3.21.0",
     "@bytemd/plugin-gfm": "^1.22.0",
     "@bytemd/plugin-highlight": "^1.22.0",
     "@bytemd/react": "^1.22.0",
